This is a commit that has half finished work around Local time versus UTC time. I am about to break the open API yaml into parts.
